博客链接整理！

--- a/doc/resource/技术栈及参考/汇总.MD
+++ b/doc/resource/技术栈及参考/汇总.MD
@@ -41,6 +41,11 @@ SpringAll
     https://www.didispace.com/spring-boot-2/6-2-ldap.html
     程序猿DD：https://www.didispace.com/home.html
     
+    互联网公司常用框架源码赏析
+    https://github.com/doocs/source-code-hunter
+    
+    Doocs
+    https://github.com/doocs
     
 ### Code博客
 小傅哥
@@ -103,6 +108,18 @@ zhengtianqi
     Java编程：API接口防止重放攻击（重复攻击）
     https://blog.csdn.net/claram/article/details/98386799
     
+子月生
+
+    https://www.cnblogs.com/ZhangZiSheng001?page=4
+    
+Coding到灯火阑珊
+
+    https://blog.csdn.net/lonewolf79218?type=blog
+    
+    分布式系列
+    分布式选举-ZAB算法-2 Leader选举 代码实现
+    https://blog.csdn.net/lonewolf79218/article/details/106192199
+    https://github.com/Justin02180218/distribute-election-zab
     
     
 ### 限流
@@ -123,6 +140,24 @@ Zuul限流
     
     Zuul-RateLimiter源码解析
     https://blog.csdn.net/lqzkcx3/article/details/124456704
+    
+限流方式
+    
+    Java实现5种限流算法及7种限流方式
+    https://www.jb51.net/article/257674.htm
+    
+    java 的限流框架 限流框架有几种
+    https://blog.51cto.com/u_16213629/7320419
+    
+    SpringCloud第十六篇：Gateway之限流篇
+    https://blog.csdn.net/xhf852963/article/details/103310421
+    
+    Spring Cloud Gateway自带RequestRateLimiter限流应用及扩展 | Spring Cloud 16
+    https://blog.csdn.net/ctwy291314/article/details/129425512
+    
+    一文速通Nginx网关与gateway网关区分_nginx和网关gateway区别
+    https://blog.csdn.net/m0_60667406/article/details/137431381
+    
     
     
 ### Netty
@@ -146,6 +181,11 @@ Netty
     Netty进阶——粘包/半包
     https://blog.csdn.net/weixin_52315708/article/details/131459681
     方渐鸿专栏
+    
+    Netty 工具类 —— HashedWheelTimer 讲解
+    https://www.cnblogs.com/lihao007/p/10588072.html
+    
+    
     
 ### 并发
 AQS
@@ -175,8 +215,113 @@ Lock
     堆（大根堆、小根堆）
     https://blog.csdn.net/pingdaozhang/article/details/106361299
     
+CS61B 课程学习总结
+    
+    https://zhuanlan.zhihu.com/p/684944044
+    
 ### Hystrix
 Hystrix
 
     java短路效应_Hystrix原理与实战
     https://blog.csdn.net/weixin_32829077/article/details/114660042
+    
+    hystrix 单独使用_hystrix入门-原生API使用
+    https://blog.csdn.net/weixin_31421625/article/details/112521705
+    
+### Feign
+Feign
+    
+    如何使用原生的Feign
+    https://www.cnblogs.com/ZhangZiSheng001/p/14989165.html
+    
+### grpc
+grpc
+
+    grpc java 拦截器的使用（包含server&client）
+    https://blog.csdn.net/mengxb12138/article/details/77991472
+    
+    gRPC 拦截器和监听器
+    https://blog.csdn.net/u013360850/article/details/115278381
+    
+    GRPCDemo
+    https://github.com/yangnk/SpringBoot_Learning/blob/master/GRPCDemo/GRPCClient/src/main/java/com/yangnk/grpcclient/service/GrpcClientController.java
+
+    教程
+    https://grpc.io/docs/languages/cpp/basics/
+    
+    C++ gRPC Quick Start
+    https://zhuanlan.zhihu.com/p/419055195
+    
+    com.google.protobuf学习笔记
+    https://blog.csdn.net/lz619719265/article/details/78496951
+    
+    gRPC java 实战：通过 maven 插件自动根据 proto 文件生成 java 代码
+    https://cloud.tencent.com/developer/article/1862405
+    
+    gRPC java 实战：通过 maven 插件自动根据 proto 文件生成 java 代码
+    https://blog.csdn.net/hugo_lei/article/details/106098217
+    
+    protoc的protoc-gen-grpc-java插件
+    https://www.cnblogs.com/ghj1976/p/5454881.html
+    
+    grpc-demo
+    https://gitee.com/luoex/grpc-demo/tree/master/grpc-spring-boot
+    
+    gRPC与SpringBoot集成
+    https://blog.csdn.net/luo15242208310/article/details/122805375#%20grpc-spring-boot-starter%E6%BA%90%E7%A0%81%E5%88%86%E6%9E%90
+    
+        
+### 技术文章
+摘抄
+
+    17 源码篇：从 Linux 出发深入剖析服务端启动流程
+    https://learn.lianglianglee.com/%e4%b8%93%e6%a0%8f/Netty%20%e6%a0%b8%e5%bf%83%e5%8e%9f%e7%90%86%e5%89%96%e6%9e%90%e4%b8%8e%20RPC%20%e5%ae%9e%e8%b7%b5-%e5%ae%8c/17%20%20%e6%ba%90%e7%a0%81%e7%af%87%ef%bc%9a%e4%bb%8e%20Linux%20%e5%87%ba%e5%8f%91%e6%b7%b1%e5%85%a5%e5%89%96%e6%9e%90%e6%9c%8d%e5%8a%a1%e7%ab%af%e5%90%af%e5%8a%a8%e6%b5%81%e7%a8%8b.md
+    https://learn.lianglianglee.com/
+    
+    分布式高可用-负载均衡-3 一致性哈希(有限负载、虚拟节点)
+    https://blog.csdn.net/lonewolf79218/article/details/107077214
+    
+    分布式选举-ZAB算法-1 Leader选举 原理
+    https://blog.csdn.net/lonewolf79218/article/details/106057152
+    （专栏）
+    
+    Java定时调度机制 - ScheduledExecutorService
+    https://www.jianshu.com/p/aeb391e4edb0
+    
+    Java和数据结构课程：CS61B for Spring2021
+    https://github.com/kefengpl/cs61b-sp21/blob/main/lab2/Arithmetic/Arithmetic.java
+    
+    Raft算法实现原理详解(图文全解析) - mikechen
+    https://mikechen.cc/20234.html
+    
+    Raft 协议原理详解，10 分钟带你掌握！
+    https://juejin.cn/post/7080138285753827336
+    
+    分布式系统之选举算法
+    https://blog.csdn.net/u011436427/article/details/136496830
+    
+    Hadoop之HDFS的FileSystem接口详解-hdfs的基本使用
+    https://blog.csdn.net/wdr2003/article/details/79860809
+        
+    
+### 设计模式
+设计模式
+
+    事件驱动模型-观察者模式实现
+    https://blog.csdn.net/sinat_36817189/article/details/106278783
+    
+    事件驱动模型（事件驱动模型和事件委托模型）
+    https://blog.csdn.net/sinat_36817189/article/details/106205029
+    
+    并发编程——Forkjoin设计模式原理
+    https://blog.51cto.com/u_13643065/6046028
+    
+    master worker设计模式
+    https://blog.csdn.net/lihongtai/article/details/86001665
+    
+### 算法
+算法
+
+    The Algorithms - Java
+    https://github.com/TheAlgorithms/Java
+    
