--- a/doc/resource/技术栈及参考/汇总.MD
+++ b/doc/resource/技术栈及参考/汇总.MD
@@ -325,3 +325,5 @@ grpc
     The Algorithms - Java
     https://github.com/TheAlgorithms/Java
     
+### Java 全栈知识体系（博客）
+    https://pdai.tech/md/arch/arch-z-transection.html
